--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
     implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.google.firebase:firebase-storage:11.0.4'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -34,7 +35,11 @@ dependencies {
     //compile 'com.microsoft.projectoxford:face:1.0.0'
     implementation 'com.github.eddydn:EDMTDevCognitiveFace:1.7'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
+    implementation 'com.google.android.gms:play-services-maps:11.0.4'
+    implementation 'com.google.android.gms:play-services-location:11.0.4'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 }
+
 
 
 
